--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,9 @@ spring:
   sql:
     init:
       mode: always
-      schema-locations: classpath:sql/schema.sql
+      schema-locations:
+        - classpath:sql/schema.sql
+        - classpath:sql/data.sql
       platform: h2
 
 server:
